syntax = "proto3"; 

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{ 
string acc_no=1;
int64 input_date=2;
string currency=3;
string tenor=4;
repeated Cashflow cashflows=5;
}
